Don't mark instructions as congruent if they produce values of different types (Bug 677867, r=dvander)